修改代码  空格

--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -251,7 +251,7 @@
         type: 'GET',
         datatype: 'json',
         data: {
-          order:"add_time desc",
+          "order": encodeURI("add_time desc"),
           page: page,
           type: 1,
           per_page: per_page,
