--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -245,7 +245,7 @@
         type: 'GET',
         datatype: 'json',
         data: {
-          order: "views desc",
+          "order": encodeURI("views desc"),
           page: page,
           per_page: per_page,
           uid: thisObj.attr("data-uid")
