--- a/views/about/about.html
+++ b/views/about/about.html
@@ -68,7 +68,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_PROFILE_SEAT10") }}
+{{slide.leyu_slide("AD_PROFILE_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_ninth.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
