--- a/views/about/events.html
+++ b/views/about/events.html
@@ -36,7 +36,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_EVENTS_SEAT10") }}
+{{slide.leyu_slide("AD_EVENTS_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_ninth.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
