--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -132,7 +132,7 @@
     </div>
   </div>
   {% import "widget/new_slide/new_slide3.html" as  slide %}
-  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
+  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info,helper) }}
   {% include 'widget/new_footer/new_footer.html' %}
   <div>
     <!-- <input type="hidden" id="detail_catid" value="{{catid}}"/> -->
