--- a/views/counsellor_set.html
+++ b/views/counsellor_set.html
@@ -121,7 +121,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 
 <script>
   $(document).ready(function () {
