--- a/views/widget/new_slide/new_slide.html
+++ b/views/widget/new_slide/new_slide.html
@@ -1,6 +1,6 @@
 <!--右侧在线咨询-->
 
-{% macro leyu_slide(path) %}
+{% macro leyu_slide(path,helper) %}
 <div class="mui-mbar-tabs" style="z-index:999">
   <div class="quick_links_wrap quick_links_dockright">
     <div class="quick_link_mian">
@@ -8,7 +8,6 @@
       <div class="quick_links_panel">
         <ul>
           <li class="on zixun message_list current" id="zxzx" style="background: #c13232;">
-
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img" style="width: 26px;">
             <span>立即咨询</span>
           </li>
