--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -77,7 +77,7 @@
   </div>
 </div>
 {% import "widget/new_slide/new_slide3.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info,helper) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
   var login_ss = null;
