--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -157,7 +157,7 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 <script>
   var login_ss = null; 
   if($.cookie('login_ss') != undefined){
