--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -96,7 +96,7 @@
   </div>
 </div>
   {% import "widget/new_slide/new_slide2.html" as  slide %}
-  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 {% include "widget/new_footer/new_footer.html" %}
   <div>
     <input type="hidden" id="detail_id" value="{{id}}"/>
