--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -115,10 +115,10 @@
 {% include "widget/new_footer/new_footer.html" %}
 {% if userinfo.usertype == 1 %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 {% elseif userinfo.usertype == 2 %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 {% endif %}
 <script>
     var login_ss = null; 
