--- a/views/center_main.html
+++ b/views/center_main.html
@@ -173,7 +173,7 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 <div id="photoDialog" style="display: none;"><!---->
     <!--上传pop-->
     <div class="upload-photo-container" id="upload-photo-container" style="display: none">
