--- a/views/center_message.html
+++ b/views/center_message.html
@@ -85,10 +85,10 @@
 {% include "widget/new_footer/new_footer.html" %}
 {% if userinfo.usertype == 1 %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 {% elseif userinfo.usertype == 2 %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 {% endif %}
 <script>
     if($.cookie('login_ss') != undefined){
