--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -243,7 +243,7 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 <script  src="{{helper.cdnhost}}/assets/js/upload_wx_code.js"></script>
 <script  src="{{helper.cdnhost}}/assets/js/upload_qq_code.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
