--- a/views/index.html
+++ b/views/index.html
@@ -365,7 +365,7 @@
 {% include "widget/new_footer/new_footer.html" %}
 </div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_HOME_SEAT10") }}
+{{slide.leyu_slide("AD_HOME_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
