--- a/views/so_article.html
+++ b/views/so_article.html
@@ -267,7 +267,7 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
