--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -1,6 +1,6 @@
 <!--右侧在线咨询-->
 
-{% macro leyu_slide(path,user,login_info) %}
+{% macro leyu_slide(path,user,login_info,helper) %}
 <div class="mui-mbar-tabs" style="z-index:999">
   <div class="quick_links_wrap quick_links_dockright">
     <div class="quick_link_mian">
