大事记样式

--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -204,7 +204,7 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_COOPEARTION_SEAT10",helper) }}
+{{slide.leyu_slide("AD_COOPERATION_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
