--- a/views/about/events.html
+++ b/views/about/events.html
@@ -26,7 +26,7 @@
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
 </div>
-<div class="dui-layout-lg clearfix" style="margin: 20px auto;">
+<div class="dui-layout-lg clearfix" style="margin: 20px auto;height: 360px;background: #dedede">
   <div class="dui-layout-lg events-guanggao" id="AD_EVENTS_SEAT1"></div>
 </div>
 <div class="dui-layout-lg dui-box-shadow" style="padding-bottom: 20px;background: #ffffff;">
