--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -80,56 +80,54 @@
 						<div class="title">所属区域：</div>
 						<div class="text1">
 							<select id="city" name="city" style="overflow-y:auto;size: 10;">
-							    <option value="1">(B)北京金吉列</option>
+								<option value="1">(B)北京金吉列</option>
 								<option value="7">(C)重庆金吉列</option>
-                                <option value="5">(C)成都金吉列</option>
-                                <option value="19">(C)长沙金吉列</option>
-                                <option value="25">(C)长春金吉列</option>
-                                <option value="41">(C)常州金吉列</option>
-                                <option value="13">(D)大连金吉列</option>
-                                <option value="43">(D)东莞金吉列</option>
-                                <option value="37">(F)佛山金吉列</option>
-                                <option value="39">(F)福州金吉列</option>
-                                <option value="3">(G)广州金吉列</option>
-                                <option value="35">(G)贵阳金吉列</option>
-                                <option value="24">(H)哈尔滨金吉列</option>
-                                <option value="32">(H)邯郸金吉列</option>
-								<option value="51">(H)汉口金吉列</option>
-                                <option value="26">(H)呼和浩特金吉列</option>
-                                <option value="6">(H)杭州金吉列</option>
-                                <option value="22">(H)合肥金吉列</option>
-                                <option value="46">(H)海南金吉列</option>
-                                <option value="9">(J)济南金吉列</option>
-                                <option value="30">(J)吉林金吉列</option>
-                                <option value="21">(K)昆明金吉列</option>
-                                <option value="27">(L)兰州金吉列</option>
-                                <option value="48">(L)洛阳金吉列</option>
-                                <option value="16">(N)南京金吉列</option>
-                                <option value="29">(N)南昌金吉列</option>
-                                <option value="38">(N)南宁金吉列</option>
-                                <option value="34">(N)宁波金吉列</option>
-                                <option value="10">(Q)青岛金吉列</option>
-                                <option value="2">(S)上海金吉列</option>
-                                <option value="8">(S)沈阳金吉列</option>
-                                <option value="12">(S)石家庄金吉列</option>
-                                <option value="20">(S)深圳金吉列</option>
-                                <option value="23">(S)苏州金吉列</option>
-                                <option value="4">(T)天津金吉列</option>
-                                <option value="17">(T)太原金吉列</option>
-                                <option value="18">(T)唐山金吉列</option>
-								<!--<option value="49">(W)武昌金吉列</option>-->
-                                <option value="50">(W)武昌金吉列</option>
-                                <option value="33">(W)无锡金吉列</option>
-                                <option value="42">(W)温州金吉列</option>
-                                <option value="28">(X)厦门金吉列</option>
-                                <option value="36">(X)徐州金吉列</option>
-                                <option value="15">(X)西安金吉列</option>
-                                <option value="45">(X)西宁金吉列</option>
-                                <option value="47">(X)乌鲁木齐金吉列</option>
-                                <option value="31">(Y)烟台金吉列</option>
-                                <option value="40">(Y)银川金吉列</option>
-                                <option value="44">(Y)宜昌金吉列</option>
-                                <option value="11">(Z)郑州金吉列</option>
+								<option value="5">(C)成都金吉列</option>
+								<option value="19">(C)长沙金吉列</option>
+								<option value="25">(C)长春金吉列</option>
+								<option value="41">(C)常州金吉列</option>
+								<option value="13">(D)大连金吉列</option>
+								<option value="43">(D)东莞金吉列</option>
+								<option value="37">(F)佛山金吉列</option>
+								<option value="39">(F)福州金吉列</option>
+								<option value="3">(G)广州金吉列</option>
+								<option value="35">(G)贵阳金吉列</option>
+								<option value="24">(H)哈尔滨金吉列</option>
+								<option value="32">(H)邯郸金吉列</option>
+								<option value="26">(H)呼和浩特金吉列</option>
+								<option value="6">(H)杭州金吉列</option>
+								<option value="22">(H)合肥金吉列</option>
+								<option value="46">(H)海南金吉列</option>
+								<option value="9">(J)济南金吉列</option>
+								<option value="30">(J)吉林金吉列</option>
+								<option value="21">(K)昆明金吉列</option>
+								<option value="27">(L)兰州金吉列</option>
+								<option value="48">(L)洛阳金吉列</option>
+								<option value="16">(N)南京金吉列</option>
+								<option value="29">(N)南昌金吉列</option>
+								<option value="38">(N)南宁金吉列</option>
+								<option value="34">(N)宁波金吉列</option>
+								<option value="10">(Q)青岛金吉列</option>
+								<option value="2">(S)上海金吉列</option>
+								<option value="8">(S)沈阳金吉列</option>
+								<option value="12">(S)石家庄金吉列</option>
+								<option value="20">(S)深圳金吉列</option>
+								<option value="23">(S)苏州金吉列</option>
+								<option value="4">(T)天津金吉列</option>
+								<option value="17">(T)太原金吉列</option>
+								<option value="18">(T)唐山金吉列</option>
+								<option value="14">(W)武汉金吉列</option>
+								<option value="33">(W)无锡金吉列</option>
+								<option value="42">(W)温州金吉列</option>
+								<option value="28">(X)厦门金吉列</option>
+								<option value="36">(X)徐州金吉列</option>
+								<option value="15">(X)西安金吉列</option>
+								<option value="45">(X)西宁金吉列</option>
+								<option value="47">(X)乌鲁木齐金吉列</option>
+								<option value="31">(Y)烟台金吉列</option>
+								<option value="40">(Y)银川金吉列</option>
+								<option value="44">(Y)宜昌金吉列</option>
+								<option value="11">(Z)郑州金吉列</option>
 							</select>
 						</div>
 						<div class="textNum"><span class="numTip" id="city-num"></span></div>
