--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -260,7 +260,7 @@
     });
     $('.art-report-btn').on('click',function(){
       //文章举报
-      report(this,1);
+      report(this,1,city_id);
     });
 
   })
