--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -95,7 +95,7 @@
               评论{{article.article_info.comments}}
             </span>
             <span style="float:right;margin-left:20px;">
-              收藏{{article.article_info.favorites}}
+              收藏<i id="collection-num">{{article.article_info.favorites}}</i>
             </span>
             <span style="float:right;margin-left: 20px;">
               阅读<i style="font-style: normal;" id="detail_views_num">{{article.article_info.views}}</i>
@@ -119,7 +119,7 @@
                 &#xe604;
               {% else %}
                 &#xe651;
-              {% endif %}  
+              {% endif %} 
               </i>点赞</span> 
             <a  style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" target="_blank"  href="http://jesong.jjl.cn/live/chat.dll?c=1&amp;n={{userinfo.job_number}}"  rel="nofollow">立即咨询</a>
           </div>
@@ -207,9 +207,11 @@
             if(result.data.action=='add'){
               layer.msg('收藏成功');
               $(that).html('已收藏');
+              $('#collection-num').text(Number(Number($('#collection-num').text())+1));
             }else if(result.data.action=='remove'){
               layer.msg('取消收藏成功');
               $(that).html('收藏');
+              $('#collection-num').text(Number($('#collection-num').text()-1));
             }
           }else if(result.code == 1){
             getlogin();
