--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -89,7 +89,7 @@
             评论{{article.article_info.comments}}
           </span>
           <span style="float:right;margin-left:20px;">
-            收藏{{article.article_info.favorites}}
+            收藏<i id="collection-num">{{article.article_info.favorites}}</i>
           </span>
           <span style="float:right;margin-left: 20px;">
             阅读<i style="font-style: normal;" id="detail_views_num">{{article.article_info.views}}</i>
@@ -199,9 +199,11 @@
             if(result.data.action=='add'){
               layer.msg('收藏成功');
               $(that).html('已收藏');
+              $('#collection-num').text(Number(Number($('#collection-num').text())+1));
             }else if(result.data.action=='remove'){
               layer.msg('取消收藏成功');
               $(that).html('收藏');
+              $('#collection-num').text(Number($('#collection-num').text()-1));
             }
           }else if(result.code == 1){
             layer.msg('你还没有去登录');
