--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -129,7 +129,7 @@
   {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
 {% include 'widget/new_footer/new_footer.html' %}
   <div>
-    <input type="hidden" id="detail_id" value="{{id}}"/>
+    <input type="hidden" id="detail_id" value="{{article_id}}"/>
   </div>
 <script>
     var login_ss = null; //获取用户信息
