--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -184,6 +184,7 @@ form, input {
     outline-style: none;
     line-height: 30px;
     text-align: center;
+    *margin-top:-30px;
 }
 .new_nav_first .search-btn i{
     font-size:16px;
