修改 加载 颜色

--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -175,8 +175,7 @@
           '</div>'+
           '<div class="homepage-title">'+
           '<p>'+
-          '<a  target="_blank" href="'+ fn.urlgen("case",aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div>'+aitem.tag_list+'</div>'+
-          '</a>'+
+          '<a  target="_blank" href="'+ fn.urlgen("case",aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div></a>'+aitem.tag_list+'</div>'+
           '</p>'+
           '</div>'+
           '<div class="homepage-p">'+
