--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -167,8 +167,7 @@
           '</div>'+
           '<div class="homepage-title">'+
           '<p>'+
-          '<a  target="_blank" href="'+ fn.urlgen("article",aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div>'+aitem.tag_list+'</div>'+
-          '</a>'+
+          '<a  target="_blank" href="'+ fn.urlgen("article",aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div></a>'+aitem.tag_list+'</div>'+
           '</p>'+
           '</div>'+
           '<div class="homepage-p">'+
