--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -111,7 +111,7 @@
   }
   input[type="checkbox"]:checked+label {color: red;}
 
-input[type="checkbox"] + label:before {
+input[type="checkbox"] + label:before, #xieyi_reg input[type="checkbox"] + label:before {
   content: "\a0"; /*不换行空格*/
   display: inline-block;
   vertical-align: middle;
@@ -126,7 +126,7 @@ input[type="checkbox"] + label:before {
   
 }
 
-input[type="checkbox"]:checked + label:before {
+input[type="checkbox"]:checked + label:before, #xieyi_reg input[type="checkbox"]:checked + label:before{
   content: "\a0"; /*不换行空格*/
   display: inline-block;
   vertical-align: middle;
@@ -157,7 +157,8 @@ input[type="checkbox"] {
   color: #c13232;
 }
 </style>
-<div class="l_u" style="display: none;">
+<!-- 登录 -->
+<div class="l_u" id="l_u" style="display: none;">
   <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_login.png" alt=""></div>
   <div class="l_u_con">
     <p>验证码登录</p>
@@ -196,7 +197,46 @@ input[type="checkbox"] {
       </div>
   </div>
 </div>
+<!-- 注册 -->
+<div class="l_u" id="r_u" style="display: none;">
+  <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_login.png" alt=""></div>
+  <div class="l_u_con">
+    <p>验证码注册</p>
+    <div class="l_u_con_"></div>
+    <form class="m-t" role="form" style="margin-top: 20px">
+      <div class="form-group inputtext_isr" style="position: relative;">
+        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="phone_reg" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确"/>
+        <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe679;</i>
+      </div>
+      <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
+        <input placeholder="请输入短信验证码" type="text" id="verify_reg" class="form-control l_u_com_yan" required data-vaild="^\d{6}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+        <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe653;</i>
+        <div class="l_u_com_bang">
+          <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
+          <input type="button" class="btn btn-primary" style="width: 90px;height: 40px;text-align: center;padding: 6px 2px;background: #fff;color: #c13232;border: 1px solid #c13232;border-radius: 3px;line-height: 0px" id="sendcun_reg" value="发送验证码"/>
+        </div>
+      </div>
+    </form>
+    <div style="margin-top: 20px;">
+      <input type="button" class="btn l_u_com_but" style="width: 330px;padding-left: 0;padding-right: 0" id="loginuser_reg" value="注 册"/>
+    </div>
+    <div class=" clearfix" id="guwen_reg" style="margin-top: 20px;">
+        <input class="wrap-con" type="checkbox" name="payMethod" value="1" id="xieyi_reg"/><label for="xieyi_reg"></label> 
+        <div class="yonghu">我已阅读并同意<a target="_blank"  href="{{helper.urlgen('agreement', '')}}">金吉列用户使用协议</a></div>
+    </div>
+    <div class="l_u_com_she">
+      <div><i>社交账号登录</i></div>
+    </div>
+    <div class="l_u_com_fen" id="fx" >
+        <img style="margin-right: 76px;" src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_reg"/>
 
+        <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{url}}" >
+          <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
+        </a>
+        <img style="margin-left: 76px;" src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_reg"/>
+      </div>
+  </div>
+</div>
 <script>
   $(function() {
     var login_nickname = JSON.parse($.cookie('login_ss'));
@@ -205,7 +245,7 @@ input[type="checkbox"] {
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con">'+
                 '<div class="top-con-right">'+
-                '<span><a target="_blank" onclick="getlogin()" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
+                '<span><a target="_blank" onclick="getregister()" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
                 '<span ><a href="javascript:void(0);" style="background: #fff;" onclick="getlogin()" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
                 '</div>'+
