--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -111,7 +111,7 @@
   }
   input[type="checkbox"]:checked+label {color: red;}
 
-input[type="checkbox"] + label:before {
+input[type="checkbox"] + label:before, #xieyi_reg input[type="checkbox"] + label:before {
   content: "\a0"; /*不换行空格*/
   display: inline-block;
   vertical-align: middle;
@@ -126,7 +126,7 @@ input[type="checkbox"] + label:before {
   
 }
 
-input[type="checkbox"]:checked + label:before {
+input[type="checkbox"]:checked + label:before, #xieyi_reg input[type="checkbox"]:checked + label:before {
   content: "\a0"; /*不换行空格*/
   display: inline-block;
   vertical-align: middle;
@@ -157,7 +157,8 @@ input[type="checkbox"] {
   color: #c13232;
 }
 </style>
-<div class="l_u" style="display: none;">
+<!-- 登录 -->
+<div class="l_u" id="l_u" style="display: none;">
   <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_login.png" alt=""></div>
   <div class="l_u_con">
     <p>验证码登录</p>
@@ -196,7 +197,46 @@ input[type="checkbox"] {
       </div>
   </div>
 </div>
+<!-- 注册 -->
+<div class="l_u" id="r_u" style="display: none;">
+  <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_login.png" alt=""></div>
+  <div class="l_u_con">
+    <p>验证码注册</p>
+    <div class="l_u_con_"></div>
+    <form class="m-t" role="form" style="margin-top: 20px">
+      <div class="form-group inputtext_isr" style="position: relative;">
+        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="phone_reg" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确"/>
+        <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe679;</i>
+      </div>
+      <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
+        <input placeholder="请输入短信验证码" type="text" id="verify_reg" class="form-control l_u_com_yan" required data-vaild="^\d{6}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+        <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe653;</i>
+        <div class="l_u_com_bang">
+          <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
+          <input type="button" class="btn btn-primary" style="width: 90px;height: 40px;text-align: center;padding: 6px 2px;background: #fff;color: #c13232;border: 1px solid #c13232;border-radius: 3px;line-height: 0px" id="sendcun_reg" value="发送验证码"/>
+        </div>
+      </div>
+    </form>
+    <div style="margin-top: 20px;">
+      <input type="button" class="btn l_u_com_but" style="width: 330px;padding-left: 0;padding-right: 0" id="loginuser_reg" value="注 册"/>
+    </div>
+    <div class=" clearfix" id="guwen_reg" style="margin-top: 20px;">
+        <input class="wrap-con" type="checkbox" name="payMethod" value="1" id="xieyi_reg"/><label for="xieyi_reg"></label> 
+        <div class="yonghu">我已阅读并同意<a target="_blank"  href="{{helper.urlgen('agreement', '')}}">金吉列用户使用协议</a></div>
+    </div>
+    <div class="l_u_com_she">
+      <div><i>社交账号登录</i></div>
+    </div>
+    <div class="l_u_com_fen" id="fx" >
+        <img style="margin-right: 76px;" src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_reg"/>
 
+        <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{url}}" >
+          <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
+        </a>
+        <img style="margin-left: 76px;" src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_reg"/>
+      </div>
+  </div>
+</div>
 <script>
   $(function() {
     var login_nickname = JSON.parse($.cookie('login_ss'));
@@ -205,7 +245,7 @@ input[type="checkbox"] {
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con">'+
                 '<div class="top-con-right">'+
-                '<span><a target="_blank" onclick="getlogin()" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
+                '<span><a target="_blank" onclick="getregister()" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
                 '<span><a href="javascript:void(0);" id="getlogin" onclick="getlogin()" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
                 '</div>'+
@@ -289,6 +329,52 @@ $('#qq').on('click', function () {
   }
 })
 
+  // 注册
+  var sP = document.getElementById('sendcun_reg');
+    if (sP.addEventListener) {
+      sP.addEventListener('click', sendphone_reg, false)
+    }else {
+      sP.attachEvent('onclick', sendphone_reg, false)
+    }
+    var bS = document.getElementById('loginuser_reg');
+    console.log('loginS', bS);
+    if (bS.addEventListener) {
+      console.log('ffff');
+      bS.addEventListener('click', login_user_reg, false);
+    } else {
+      console.log('eeeee');
+      bS.attachEvent('onclick', login_user_reg, false);
+    }
+    $('#weibo_reg').on('click', function () {
+      var h = window.location.href;//获取全部的url
+      console.log('h', h);
+      var hh = h.split("?");
+      console.log('hh', hh[1])
+      if (hh[1] !== undefined) {
+        var str = hh[1].substr(1);
+        var strs = str.split("=");
+        console.log('strs', strs)
+        var A = window.open(js_api_config.wwhost+ "/sina_login?h=" + strs[1], "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
+      } else {
+        var A = window.open(js_api_config.wwhost+ "/sina_login?h=" + js_api_config.wwhost, "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
+      }
+    })
+    $('#qq_reg').on('click', function () {
+    //以下为按钮点击事件的逻辑。注意这里要重新打开窗口
+    //否则后面跳转到QQ登录，授权页面时会直接缩小当前浏览器的窗口，而不是打开新窗口
+      var h = window.location.href;//获取全部的url
+      console.log('h', h);
+      var hh = h.split("?");
+      console.log('hh', hh)
+      if (hh[1] !== undefined) {
+        var str = hh[1].substr(1);
+        var strs = str.split("=");
+        console.log('strs', strs)
+        var A = window.open(js_api_config.wwhost+"/qq_login?h=" + strs[1], "TencentLogin", "width=695,height=475,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
+      } else {
+        var A = window.open(js_api_config.wwhost+"/qq_login?h=" + js_api_config.wwhost, "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
+      }
+    })
 })
 var layeropen;
 function getlogin () {
@@ -303,7 +389,7 @@ function getlogin () {
             border: [0],
             bgcolor: "#fff",
             scrollbar : false,
-            content: $('.l_u'),
+            content: $('#l_u'),
             success : function(){
                 
           },
@@ -318,6 +404,32 @@ function getlogin () {
       });
 }
 
+function getregister () {
+
+layeropen = layer.open({
+      type: 1,
+      shade: [0.4,'#000'],
+      shadeClose: true,
+      closeBtn: true,
+      area: ['421px', '437px'],
+      title: false,
+      border: [0],
+      bgcolor: "#fff",
+      scrollbar : false,
+      content: $('#r_u'),
+      success : function(){
+        
+      },
+      cancel:function(){
+        $("#phone_reg").parent().removeClass("has-error").addClass("has-success");
+        $("#phone_reg").popover("destroy");
+      },
+      end:function() {
+        $("#phone_reg").parent().removeClass("has-error").addClass("has-success");
+        $("#phone_reg").popover("destroy");
+      }
+});
+}
 function sendphone () {
 if ($('#phone').val() === '') {
 //            let butp = document.getElementById('phone')
@@ -429,4 +541,101 @@ $.ajax({
   }
 })
 }
+
+//注册验证码
+function sendphone_reg () {
+    if ($('#phone_reg').val() === '') {
+//            let butp = document.getElementById('phone')
+      $('#phone_reg').parent().addClass("has-error").removeClass("has-success");
+      $('#phone_reg').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
+      return
+    }
+    if (!/^1[3|4|5|7|8]\d{9}$/.test($("#phone_reg").val())) {
+//            let butp = document.getElementById('phone')
+      $('#phone_reg').parent().addClass("has-error").removeClass("has-success");
+      $('#phone_reg').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
+      return
+    }
+    $.ajax({
+//          url: 'http://192.168.100.77/api/sendcode/' + $('#phone').val(),
+//    url: 'http://www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
+//      url: ajaxUrlPrefix.ucapi + '/api/index.php?m=sendcode&phone=' + $('#newEmail').val(),
+      url: '/sendcode_s',
+      type:'GET',
+      data: {
+        phone: $('#phone_reg').val()
+      },
+      dataType:'json',
+      withCredentials:true,
+      success:function(msg){
+        console.log('msg', msg);
+        if (msg.code === 0) {
+          layer.msg('短信发送成功，请查阅手机');
+        } else {
+          layer.msg('数据错误');
+        }
+      },
+      error:function(XMLHttpRequest, textStatus, errorThrown){
+        console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status);
+        layer.msg("获取失败，请重试！CODE:"+XMLHttpRequest.status);
+      }
+    });
+    var downcount = 60;
+    var time = setInterval(function (){
+      if (downcount === 0) {
+        $("#sendcun_reg").attr("value", "发送验证码");
+        $("#sendcun_reg").removeAttr("disabled");
+        clearInterval(time);
+        return
+      }else {
+        $("#sendcun_reg").attr("disabled", "disabled");
+        $("#sendcun_reg").attr("value", downcount + "s");
+        downcount--;
+      }
+    }, 1000);
+  }
+  //注册
+  function login_user_reg () {
+    if ($('#phone_reg').val() === '') {
+//            let butp = document.getElementById('phone')
+      $('#phone_reg').parent().addClass("has-error").removeClass("has-success");
+      $('#phone_reg').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
+      return
+    }
+    if (!/^1[3|4|5|7|8]\d{9}$/.test($("#phone_reg").val())) {
+//            let butp = document.getElementById('phone')
+      $('#phone_reg').parent().addClass("has-error").removeClass("has-success");
+      $('#phone_reg').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
+      return
+    }
+    if ($('#verify_reg').val() === '') {
+      layer.msg('请输入手机验证码');
+      return
+    }
+    if (!$("#guwen_reg input[type='checkbox']").is(':checked')) {
+      layer.msg('请同意注册协议');
+      return
+    }
+    $.ajax({
+      url: '/login_user',
+      type:'POST',
+      dataType:'json',
+      data: {
+        phone: $('#phone_reg').val(),
+        code: $('#verify_reg').val(),
+      },
+      success:function(msg) {
+        console.log('msg', msg);
+        if (msg.code == 0) {
+          layer.msg('登录成功');
+          layer.close(layeropen);
+          // window.location.reload();
+          window.location = '/';
+        } else {
+          console.log(msg)
+          layer.msg(msg.message)
+        }
+      }
+    });
+  }
 </script>
