--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -134,7 +134,7 @@
 
   <div class="common-title  white-bg clearfix" style="border-bottom: 1px solid #c13232;width: 1140px; margin: 0 20px;">
     <i></i>
-    <h3><span style="color:#c13232;">报名方式</span></h3>
+    <h3><span style="color:#c13232;">合作登记</span></h3>
   </div>
 
 
@@ -172,7 +172,9 @@
     height: 30px;border: 1px solid #dcdcdc;padding-left:10px" placeholder="输入您的电子邮箱" />
     <div class="numTip" style="margin-left:88px;height:20px;line-height: 20px;color:#ff7d31;" id="phoneNumTip4"></div>
   </div>
-
+  <div class="quick-text1" style="margin: 0px 0 0px 60px;*margin-left: 20px;float: left">
+    <label class="title" for="quickPhone" style="font-size: 14px;font-weight: 500;line-height: 30px;margin-right: 10px;" >合作邮箱 : <span style="color: #666;margin-left: 10px;margin-top: -1px">gxp@jjl.cn</span></label>
+  </div>
   <div class="dui-layout-lg" style="float: left">
     <div class="quick-text1" style="margin: 0px 0 0px 20px;*margin-left: 20px;float: left">
       <div id="wrap">
