--- a/views/about/culture.html
+++ b/views/about/culture.html
@@ -26,7 +26,7 @@
 <div class="dui-layout-lg clearfix dui-box-shadow" style="background: #ffffff;margin-top:20px;    padding-bottom: 20px;">
   <div class="common-title  white-bg clearfix" style="border-bottom: 1px solid #c13232;width: 1140px; margin: 0px 20px 0;">
     <i></i>
-    <h3><span style="color:#c13232;">"金"</span>彩时刻</h3>
+    <h3><span style="color:#c13232;"></span>诚信文化</h3>
 
   </div>
   {% import "widget/academy/academy6.html" as culture %}
