关于我们广告位

--- a/views/about/about.html
+++ b/views/about/about.html
@@ -19,7 +19,7 @@
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix" style="margin: 20px auto;">
-  <div class="dui-layout-lg about-guanggao" id="AD_PROFILE_SEAT1">
+  <div class="dui-layout-lg about-guanggao"  style="height: 360px;background: #dedede" id="AD_PROFILE_SEAT1">
 </div>
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
